k8s/jupyterlab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterlab-ingress
  namespace: jupyterlab
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-url: https://id.basedosdados.org/auth/
    nginx.ingress.kubernetes.io/auth-signin: https://id.basedosdados.org/auth/login/?rd=https://$host$request_uri$is_args$args
    cert-manager.io/issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 300m
spec:
  tls:
  - hosts:
    - jupyter.basedosdados.org
    secretName: jupyterlab-tls
  rules:
  - host: jupyter.basedosdados.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jupyterlab
            port:
              number: 80
